--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q69WQ593WM"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-279984722-1"></script>
   <title>Learn Develop and Grow</title>
 </head>
 
