changed some thing

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <!-- Google tag (gtag.js) -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-279984722-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q69WQ593WM"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -18,7 +18,7 @@
     }
     gtag('js', new Date());
 
-    gtag('config', 'UA-279984722-1');
+    gtag('config', 'G-Q69WQ593WM');
   </script>
   <title>Learn Develop and Grow</title>
 </head>
