--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <!-- Google tag (gtag.js) -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q69WQ593WM"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKMKM8BMLL"></script>
   <title>Learn Develop and Grow</title>
 </head>
 
