--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,18 @@
   <meta name="description" content="Web site created using create-react-app" />
   <!-- Google tag (gtag.js) -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKMKM8BMLL"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NLRRDMJQ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-9NLRRDMJQ6');
+  </script>
   <title>Learn Develop and Grow</title>
 </head>
 
