--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FGGN19FGW3"></script>
   <title>Learn Develop and Grow</title>
 </head>
 
