--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,17 @@
   <meta name="color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FGGN19FGW3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKMKM8BMLL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'G-FGGN19FGW3');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-JKMKM8BMLL');
+  </script>
   <title>Learn Develop and Grow</title>
 </head>
 
