--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FGGN19FGW3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FGGN19FGW3');
+</script>
   <title>Learn Develop and Grow</title>
 </head>
 
