--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,19 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Learn Develop & Grow: Official Website in Kolkata. Providing community support, hand-holding, career counseling, spoken English training, success habits, and leadership skills.">
+  <meta name="keywords" content="Learn Develop & Grow, Official Website, Kolkata, Community Support, Career Counseling, Spoken English, Success Habits, Leadership Skills">
+  <meta name="author" content="Asst. Professor Mohammad Firoz">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Learn Develop & Grow Kolkata">
+  <meta property="og:description" content="Enhance your skills with Learn Develop & Grow: Official Website Kolkata. We provide community support, hand-holding, career counseling, and more.">
+  <meta property="og:image" content="profpic.jpg">
+  <meta property="og:url" content="https://ark-learn-develop-and-grow.vercel.app">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="en_US">
+  <!-- <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Learn Develop & Grow Official Website Kolkata">
+  <meta name="twitter:description" content="Enhance your skills with Learn Develop & Grow: Official Website in Kolkata. We provide community support, hand-holding, career counseling, and more."> -->
       <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FGGN19FGW3"></script>
 <script>
